--- a/css/build.css
+++ b/css/build.css
@@ -22,8 +22,19 @@ body {
   color: black;
   line-height: 1.2; }
 
+h1 {
+  font-size: 36px; }
+
+h2 {
+  font-size: 24px;
+  font-family: "PFAgoraSerifProB";
+  color: #333333;
+  line-height: 1.2; }
+
+button {
+  outline: none !important; }
+
 .button {
-  outline: none !important;
   border-radius: 21px;
   padding: 14px 24px 14px 25px;
   border: 0;
@@ -40,6 +51,18 @@ body {
     color: #343434;
     line-height: 0.8;
     background-color: rgba(255, 255, 255, 0.961); }
+    .button.outline-gray:hover {
+      border: 0;
+      background-color: #c5c5c5;
+      color: white; }
+  .button.btn-gray {
+    border-radius: 20px;
+    background-color: #c5c5c5;
+    width: 199px;
+    height: 40px;
+    font-size: 18px;
+    color: white;
+    line-height: 1; }
 
 .header-container {
   padding-top: 10px;
@@ -107,6 +130,128 @@ body {
       margin-top: 4px; }
     .tiles .tile-item img {
       margin-bottom: 67px; }
+
+.slider {
+  background-color: #f7f7f7;
+  padding-bottom: 83px; }
+  .slider.jeweleries {
+    padding-top: 58px; }
+  .slider .slider-nav {
+    margin-top: 50px;
+    margin-bottom: 31px;
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid #d0d2d7; }
+    .slider .slider-nav .slider-nav--item {
+      margin-right: 25px;
+      margin-left: 25px;
+      padding-bottom: 13px; }
+      .slider .slider-nav .slider-nav--item:hover button, .slider .slider-nav .slider-nav--item .active button {
+        color: #44afd4; }
+        .slider .slider-nav .slider-nav--item:hover button:after, .slider .slider-nav .slider-nav--item .active button:after {
+          opacity: 1; }
+      .slider .slider-nav .slider-nav--item button {
+        padding: 0;
+        position: relative;
+        background: transparent;
+        border: 0;
+        font-size: 24px;
+        font-family: "PFAgoraSerifPro";
+        line-height: 1.2;
+        color: #333333; }
+        .slider .slider-nav .slider-nav--item button:after {
+          position: absolute;
+          content: '';
+          width: 100%;
+          height: 2px;
+          background-color: #0092c5;
+          bottom: -13px;
+          left: 0;
+          opacity: 0; }
+  .slider .slider-container {
+    padding: 0;
+    margin-bottom: 28px; }
+    .slider .slider-container .slider-item {
+      background-color: white;
+      height: 500px;
+      text-align: center;
+      padding-top: 31px; }
+      .slider .slider-container .slider-item:hover {
+        padding-top: 30px;
+        border: 1px solid #44afd4; }
+      .slider .slider-container .slider-item h3 {
+        font-size: 24px;
+        font-family: "PFAgoraSerifProB";
+        color: black;
+        font-weight: bold;
+        line-height: 1.2;
+        margin-bottom: 0; }
+      .slider .slider-container .slider-item .item-img {
+        height: 250px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end; }
+        .slider .slider-container .slider-item .item-img img {
+          margin: auto;
+          max-width: 100%;
+          width: 100%;
+          max-height: 100%; }
+      .slider .slider-container .slider-item .item-price-block {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        height: 110px;
+        border-bottom: 1px solid #d0d2d7;
+        border-top: 1px solid #d0d2d7; }
+        .slider .slider-container .slider-item .item-price-block .old-price {
+          font-size: 24px;
+          font-family: "PFAgoraSerifProB";
+          color: #b0b0b0;
+          text-decoration: line-through;
+          line-height: 1.2;
+          text-align: center; }
+        .slider .slider-container .slider-item .item-price-block .price {
+          font-size: 36px;
+          font-family: "PFAgoraSerifProB";
+          color: black;
+          font-weight: bold;
+          line-height: 1.2;
+          text-align: center; }
+      .slider .slider-container .slider-item .item-btn-block {
+        padding-top: 21px; }
+    .slider .slider-container .owl-dots {
+      margin-top: 53px !important; }
+    .slider .slider-container .slider-navigation {
+      position: relative; }
+      .slider .slider-container .slider-navigation .arrow {
+        position: absolute; }
+
+.subscribe-section {
+  padding-top: 61px;
+  padding-bottom: 56px;
+  background-image: url("../assets/bg-subscribe.png"); }
+  .subscribe-section .subscribe-block {
+    width: 100%;
+    display: flex;
+    margin-top: 43px;
+    padding-left: 15px;
+    padding-right: 15px; }
+    .subscribe-section .subscribe-block input {
+      border: 0;
+      background-color: #f7f7f7;
+      border-radius: 20px;
+      width: 100%;
+      padding-left: 25px;
+      padding-right: 25px;
+      margin-right: -190px;
+      height: 47px; }
+      .subscribe-section .subscribe-block input::placeholder {
+        font-size: 18px;
+        font-family: "PFAgoraSerifPro";
+        color: #333333;
+        line-height: 1.2; }
+    .subscribe-section .subscribe-block button {
+      margin-top: 2px; }
 
 .item-collections {
   justify-content: space-between;
@@ -210,6 +355,72 @@ body {
           height: 1px; }
     .top-nav .top-nav--row .top-nav--item:first-of-type {
       border-left: 1px solid #afafaf; }
+
+.social-block {
+  display: flex;
+  margin-top: 16px; }
+  .social-block .social-block-item {
+    margin-right: 6px;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    background-color: #afafaf;
+    border-radius: 100%; }
+    .social-block .social-block-item:hover {
+      background-color: #44afd4; }
+    .social-block .social-block-item a {
+      width: 100%;
+      height: 100%;
+      display: flex; }
+      .social-block .social-block-item a:hover {
+        text-decoration: none; }
+      .social-block .social-block-item a i {
+        margin: auto;
+        color: white;
+        font-size: 14px; }
+
+footer {
+  height: 370px;
+  background-image: url("../assets/bg-footer.png");
+  padding-top: 75px; }
+  footer .copyright {
+    font-size: 12px;
+    line-height: 1.2;
+    margin-bottom: 36px; }
+  footer .logo {
+    margin-bottom: 11px; }
+  footer .phone {
+    font-size: 18px;
+    color: #333333;
+    line-height: 1.2;
+    font-family: 'PFAgoraSerifProB', sans-serif; }
+  footer .footer-menu .footer-menu--name {
+    font-size: 18px;
+    color: #333333;
+    font-family: 'PFAgoraSerifProB', sans-serif;
+    line-height: 1.2;
+    text-transform: uppercase;
+    margin-bottom: 8px; }
+  footer .footer-menu .footer-menu--item {
+    color: #333333;
+    font-size: 14px;
+    display: block;
+    margin-bottom: 4px; }
+    footer .footer-menu .footer-menu--item:hover {
+      color: #44afd4; }
+  footer .payment-block {
+    display: flex;
+    margin-bottom: 31px;
+    margin-top: 16px; }
+    footer .payment-block .payment-item {
+      border-radius: 20px;
+      background-color: white;
+      width: 97px;
+      height: 41px;
+      margin-right: 25px;
+      display: flex; }
+      footer .payment-block .payment-item img {
+        margin: auto; }
 
 @font-face {
   font-family: 'PFAgoraSerifPro';
