--- a/scss/build.scss
+++ b/scss/build.scss
@@ -4,7 +4,11 @@
 @import "header-container";
 @import "main-section";
 @import "tiles";
+@import "sliders";
+@import "subscribe-section";
 @import "item-collections";
 @import "promo-woman-block";
 @import "top-nav";
+@import "social-block";
+@import "footer";
 @import "fonts";
