--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -1,5 +1,8 @@
-.button {
+button{
   outline: none !important;
+
+}
+.button {
   border-radius: 21px;
   padding: 14px 24px 14px 25px;
   border: 0;
@@ -18,5 +21,20 @@
     color: rgb(52, 52, 52);
     line-height: 0.8;
     background-color: rgba(255, 255, 255, 0.961);
+    &:hover{
+      border: 0;
+      background-color: rgb(197, 197, 197);
+      color: rgb(255, 255, 255);
+    }
+  }
+  &.btn-gray {
+    //border: 1px solid rgb(50, 193, 217);
+    border-radius: 20px;
+    background-color: rgb(197, 197, 197);
+    width: 199px;
+    height: 40px;
+      font-size: 18px;
+      color: rgb(255, 255, 255);
+      line-height: 1;
   }
 }
