--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,6 +1,15 @@
-.primary-text{
-    font-size: 18px;
-    font-family: "PFAgoraSerifPro";
-    color: rgb(0, 0, 0);
-    line-height: 1.2;
+.primary-text {
+  font-size: 18px;
+  font-family: "PFAgoraSerifPro";
+  color: rgb(0, 0, 0);
+  line-height: 1.2;
+}
+h1{
+  font-size: 36px;
+}
+h2 {
+  font-size: 24px;
+  font-family: "PFAgoraSerifProB";
+  color: rgb(51, 51, 51);
+  line-height: 1.2;
 }
