--- a/scss/_subscribe-section.scss
+++ b/scss/_subscribe-section.scss
@@ -9,6 +9,7 @@
     padding-left: 15px;
     padding-right: 15px;
     input{
+      outline: none !important;
       border: 0;
       background-color: #f7f7f7;
       border-radius: 20px;
