--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -4,6 +4,12 @@
   color: rgb(0, 0, 0);
   line-height: 1.2;
 }
+.circe{
+  font-family: 'Circe', sans-serif;
+  &.fw-bold{
+    font-weight: bold;
+  }
+}
 h1{
   font-size: 36px;
 }
@@ -13,3 +19,10 @@ h2 {
   color: rgb(51, 51, 51);
   line-height: 1.2;
 }
+h3{
+    font-size: 30px;
+    font-family: "Circe";
+    font-weight: bold;
+    line-height: 1.2;
+}
+
