--- a/scss/build.scss
+++ b/scss/build.scss
@@ -1,8 +1,10 @@
 @import "vars";
 @import "typography";
 @import "buttons";
+@import "breadcrumbs";
 @import "header-container";
 @import "main-section";
+@import "about";
 @import "tiles";
 @import "sliders";
 @import "subscribe-section";
