--- a/scss/build.scss
+++ b/scss/build.scss
@@ -7,6 +7,7 @@
 @import "main-section";
 @import "about";
 @import "tiles";
+@import "sales";
 @import "sliders";
 @import "subscribe-section";
 @import "item-collections";
