--- a/scss/build.scss
+++ b/scss/build.scss
@@ -8,6 +8,7 @@
 @import "about";
 @import "tiles";
 @import "sales";
+@import "magazines";
 @import "sliders";
 @import "subscribe-section";
 @import "item-collections";
