--- a/css/build.css
+++ b/css/build.css
@@ -2,6 +2,12 @@
 body {
   font-family: 'PFAgoraSerifPro', sans-serif; }
 
+a {
+  cursor: pointer !important; }
+
+button {
+  cursor: pointer !important; }
+
 .text-deepBlue {
   color: #0092c5; }
 
@@ -102,7 +108,6 @@ h3 {
     .catalog .catalog-grid-container .catalog-item:nth-of-type(3n) {
       margin-right: 0; }
     .catalog .catalog-grid-container .catalog-item:hover {
-      padding-top: 30px;
       border: 1px solid #44afd4; }
     .catalog .catalog-grid-container .catalog-item .promo-label {
       border-radius: 100%;
@@ -487,6 +492,71 @@ button {
         font-size: 18px;
         font-family: "Circe";
         line-height: 1; }
+
+.magazines {
+  padding-top: 49px;
+  padding-bottom: 31px; }
+  .magazines .main-header {
+    text-align: center;
+    font-size: 36px;
+    font-family: "Circe";
+    color: #0092c5;
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 1;
+    margin-bottom: 41px; }
+  .magazines .magazine-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 70px; }
+    .magazines .magazine-row .slider-block {
+      width: 61%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center; }
+      .magazines .magazine-row .slider-block .arrow {
+        border: 0;
+        padding: 0;
+        background: transparent; }
+      .magazines .magazine-row .slider-block .slider-content {
+        width: calc(100% - 68px); }
+        .magazines .magazine-row .slider-block .slider-content .owl-dots {
+          margin-top: 25px; }
+          .magazines .magazine-row .slider-block .slider-content .owl-dots .owl-dot.active span {
+            background: #0092c5; }
+    .magazines .magazine-row .description-block {
+      width: 35%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding-bottom: 53px; }
+      .magazines .magazine-row .description-block h4 {
+        font-size: 24px;
+        font-family: "Circe";
+        color: black;
+        font-weight: bold;
+        text-transform: uppercase;
+        line-height: 1.2;
+        margin-bottom: 0; }
+        .magazines .magazine-row .description-block h4 .city {
+          width: 100%;
+          display: block; }
+      .magazines .magazine-row .description-block .contacts-block .contact {
+        display: flex;
+        margin-bottom: 4px;
+        align-items: center; }
+        .magazines .magazine-row .description-block .contacts-block .contact img {
+          margin-right: 14px; }
+        .magazines .magazine-row .description-block .contacts-block .contact a {
+          cursor: pointer !important; }
+        .magazines .magazine-row .description-block .contacts-block .contact .contact-text {
+          font-size: 18px;
+          font-family: "Circe";
+          color: black;
+          line-height: 1.667; }
+          .magazines .magazine-row .description-block .contacts-block .contact .contact-text:hover {
+            color: black; }
 
 .slider {
   background-color: #f7f7f7;
